change venv root to UMATOBI_ROOT/local
(closed #131)

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 umatobi-simulation/
 umatobi-simulation-test/
 
+# virtual env
+local/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
