--- a/umatobi/tests/fixtures/test.yaml
+++ b/umatobi/tests/fixtures/test.yaml
@@ -82,3 +82,34 @@ test_set_nodes:
   node_index: 10
   log_level: INFO
 
+test_multiple_inserts_0:
+- ../fixtures/test.schema
+- test_table
+- id: 0
+  val_null:     'null'
+  val_integer:  '0'
+  val_real:     '0.0'
+  val_text:     'multiple inserts 0'
+  val_blob:     'bXVsdGlwbGUgaW5zZXJ0cyAw'
+  now:          '2002-11-02T23:22:00.000'
+  elapsed_time: 100.000
+  iso8601:      '2002-11-02T23:22:00.000000'
+
+test_multiple_inserts_1:
+- ../fixtures/test.schema
+- test_table
+- id: 1
+  val_null:    'null'
+  val_integer: '1'
+  val_real:    '1.1'
+  val_text:    'multiple inserts 1'
+  val_blob:    'bXVsdGlwbGUgaW5zZXJ0cyAx'
+  now:          '2112-11-12T23:22:11.111'
+  elapsed_time: 111.111
+  iso8601:      '2112-11-12T23:22:11.111111'
+
+# :!echo -n 'multiple inserts 0' | python3 -m base64 -e -
+# bXVsdGlwbGUgaW5zZXJ0cyAw
+#
+# :!echo -n 'multiple inserts 1' | python3 -m base64 -e -
+# bXVsdGlwbGUgaW5zZXJ0cyAx
