--- a/umatobi/tests/fixtures/test.yaml
+++ b/umatobi/tests/fixtures/test.yaml
@@ -113,3 +113,21 @@ test_multiple_inserts_1:
 #
 # :!echo -n 'multiple inserts 1' | python3 -m base64 -e -
 # bXVsdGlwbGUgaW5zZXJ0cyAx
+
+test_collect_client_dbs:
+- ../../simulator/simulation.schema
+- clients
+- id: 0
+  addr: localhost:10000
+  consult_iso8601: '2019-11-22T11:11:44.901234'
+  thanks_iso8601: '2019-11-22T11:12:20.901234'
+  num_nodes: 100
+  node_index: 0
+  log_level: INFO
+- id: 1
+  addr: localhost:10001
+  consult_iso8601: '2019-11-22T11:11:44.901234'
+  thanks_iso8601: '2019-11-22T11:12:20.901234'
+  num_nodes: 50
+  node_index: 100
+  log_level: INFO
